syntax = "proto3";

option go_package = "github.com/6531503042/Sport-Complex/modules/booking/proto";

import "google/protobuf/timestamp.proto";

message Slot {
    string id = 1;
    string start_time = 2;
    string end_time = 3;
}

message Booking {
    string id = 1;
    string user_id = 2;
    string slot_id = 3;
    string status = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

message InsertBookingRequest {
    string user_id = 1;
    string facilityName = 2;
    string slot_id = 3;
}

message InsertBookingResponse {
    string bookingId = 1;
    string status = 2;
  }

message UpdateBookingRequest {
    string booking_id = 1;
    string facilityName = 2;
}

message UpdateBookingResponse {
    string status = 1;
  }

message FindBookingRequest {
    string bookingId = 1;
  }
  
  message FindBookingResponse {
    string bookingId = 1;
    string status = 2;
  }

  service BookingService {
    rpc InsertBooking (InsertBookingRequest) returns (InsertBookingResponse);
    rpc UpdateBooking (UpdateBookingRequest) returns (UpdateBookingResponse);
    rpc FindBooking (FindBookingRequest) returns (FindBookingResponse);
  }
